[package]
name = "gts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.66"
spinners = "2.0.0"
ansi-escapes = "0.1.1"
colorful = "0.2.1"
tabled = "0.2.2"
