[package]
name = "gts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.66"
spinners = "2.0.0"
ansi-escapes = "0.1.1"
colorful = "0.2.1"
tabled = "0.2.2"
dirs = "3.0"
serde_yaml = "0.8.20"
dialoguer = "0.8.0"
ansi_term = "0.12.1"
num-format = "0.4.0"
chrono = "0.4.19"
assert_cmd = "2.0.2"
predicates = "2.0.3"
